@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/transset
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/transset/ChangeLog,v 1.9 2007/02/24 16:41:58 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/transset/ChangeLog,v 1.10 2007/09/07 19:36:41 wolf31o2 Exp $
+
+  07 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
+  transset-0.1_pre20040821.ebuild:
+  Stable on x86 wrt bug #191615.
 
   24 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
   transset-0.1_pre20040821.ebuild:
