@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/driconf
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/driconf/ChangeLog,v 1.12 2007/08/29 17:54:18 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/driconf/ChangeLog,v 1.13 2007/09/07 19:36:18 wolf31o2 Exp $
+
+  07 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org> driconf-0.9.1.ebuild:
+  Stable on x86 wrt bug #191615.
 
   29 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing joshuabaergen from metadata due to his retirement (see #92210 for
